Started reorganizing the runs